fix some spacing

--- a/app/css/install.css
+++ b/app/css/install.css
@@ -161,7 +161,8 @@
 
 .menu {
   border-bottom: 4px solid #4a5b7a;
-  padding-bottom: 4px; }
+  padding-bottom: 4px;
+  margin-bottom: 5px; }
   .menu ul {
     list-style: none;
     padding: 0;
@@ -304,7 +305,7 @@
     box-shadow: none; }
   .panel-install .panel-body .flex-row {
     background: #f7f7f7;
-    border-bottom: 7px solid #fff; }
+    border-bottom: 5px solid #fff; }
   .panel-install .panel-body .col-8 {
     background: #f1f1f1; }
   .panel-install .panel-body .install-accordion__change {
@@ -672,6 +673,9 @@
         margin-left: -14px;
         margin-bottom: -10px; }
       .flex-row.mobile-block .col-8 {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
         min-height: 40px; }
         .flex-row.mobile-block .col-8 input {
           min-height: 20px; } }
@@ -1733,7 +1737,7 @@ option.avatar {
   .router-row > div {
     margin: 0 4px;
     width: 100%; }
-  .router-row .install-accordion__ico {
+  .router-row .install-row .install-accordion__ico {
     margin-left: -3px; }
   .router-row .install-accordion__subtitle {
     display: flex;
